# animeon-cli

./: README.md  pyproject.toml  requirements.txt
animeon/: __init__.py  __main__.py  constants.py
animeon/config/: __init__.py  api.py  base.py  logging.py
animeon/core/: __init__.py  api.py  extractor.py  http.py
animeon/integrations/players/: __init__.py  base.py  mpv.py
animeon/integrations/prompters/: __init__.py  base.py  fzf.py
animeon/models/: __init__.py  anime.py  anime_preview.py  episode.py  fandub.py  player.py  search_result.py
animeon/scripts/: fzf_preview.sh
animeon/ui/: __init__.py  cli.py  player.py  preview.py  prompt.py  selector.py
animeon/ui/commands/: __init__.py  base.py  search.py
animeon/utils/: __init__.py  config.py  dependencies.py  logging.py  url.py
animeon/utils/preview/: __init__.py  formatter.py  image_downloader.py  preview.py
src/: __init__.py  __main__.py  config.py
src/core/: __init__.py  api.py  http.py
src/models/: __init__.py  anime.py  episode.py  fandub.py  player.py
src/ui/: __init__.py  cli.py  player.py  preview.py  prompt.py  selector.py
src/ui/commands/: search.py
src/utils/: __init__.py  dependencies.py  logging.py  url.py
