[tool.poetry]
name = "animeon"
version = "0.1.0"
description = "CLI tool for searching and watching anime"
authors = ["Skrriply"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Skrriply/AnimeOn-CLI"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.scripts]
animeon = "src.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
