[tool.poetry]
name = "animeon"
version = "0.1.1"
description = "CLI tool for searching and watching anime"
authors = ["Skrriply"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Skrriply/animeon-cli"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.scripts]
animeon = "src.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
