[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "animeon"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
requires-python = ">=3.10"
authors = [{ name = "Skrriply" }]
description = "CLI інструмент для пошуку та відтворення аніме"
readme = "README.md"
license = "GPL-3.0"

[project.urls]
Homepage = "https://github.com/Skrriply/animeon-cli"
Repository = "https://github.com/Skrriply/animeon-cli.git"
Issues = "https://github.com/Skrriply/animeon-cli/issues"

[project.scripts]
animeon = "animeon.__main__:main"

[tool.hatch.version]
path = "animeon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["animeon"]

[dependency-groups]
dev = ["ruff>=0.8.3", "pyright>=1.1.376"]
